@@ -29,10 +29,10 @@ import TestSCons
 test = TestSCons.TestSCons()
 
 test.write('SConstruct', """
-env = Environment(LIBS = [ 'foo1', 'foo2' ],
+env = Environment(LIBS = [ 'foo1', 'libfoo2' ],
                   LIBPATH = [ '.' ])
 env.Library(target = 'foo1', source = 'f1.c')
-env.Library(target = 'foo2', source = Split('f2a.c f2b.c f2c.c'))
+env.Library(target = 'libfoo2', source = Split('f2a.c f2b.c f2c.c'))
 libtgt=env.Library(target = 'foo3', source = ['f3a.c', 'f3b.c', 'f3c.c'])
 env.Program(target = 'prog', source = [ 'prog.c', libtgt ])
 """)
